# order-notify

./: .env.local.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml
apps/core/: api.py  exceptions.py  log_config.py  middleware.py  schemas.py
apps/orders/: admin.py  api.py  models.py  schemas.py  services.py  tasks.py
apps/orders/migrations/: 0001_initial.py  0002_order_status_db_index.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  prod.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml
docker/nginx/: default.conf  nginx.conf
docs/plans/: 2026-02-25-best-practices-alignment-design.md  2026-02-25-best-practices-alignment-plan.md
scripts/: check_unused_functions.py
tests/: conftest.py  test_health.py  test_orders_api.py  test_orders_services.py  test_orders_tasks.py
